welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot: error: not found: value growFlowers
	    growFlowers();
            ^FlowerPot:2: error: missing arguments for method faireFleur in class FlowerPot;
follow this method with `_' if you want to treat it as a partially applied function
  faireFleur
  ^FlowerPot:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.FlowerPot'
override def run() {
             ^