welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
override def run() {
  faireFleur
}

def faireFleur(c:Color) {
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  avance()
  setCouleurBrosse(Color.YELLOW)
  baisseBrosse()
  leveBrosse()
  avance()
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  recule()
  gauche()
  avance()
  baisseBrosse()
  leveBrosse()
  recule()
  recule()
  baisseBrosse()
  leveBrosse()
  avance()
  droite()
  recule()
}

